--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,10 +1,13 @@
 .myNavbar {
   background: #1e2640;
   display: flex;
-  width: 224px;
+  height: 100vh;
+  width: 240px;
   padding: 16px 10px;
   flex-direction: column;
   align-items: center;
+  position:fixed;
+  box-sizing: border-box;
 }
 
 .companyDetails {
